# grpc_server_rs_template

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  template_setup.sh
proto/: grpc_server_rs_template.proto
src/: config.rs  error.rs  grpc_server_rs_template.rs  lib.rs  main.rs  tracing.rs
src/server/: mod.rs
